# causal-text-embeddings-tf2

./: .gitattributes  .gitignore  README.md  preproc.py  pyproject.toml
PeerRead/data_cleaning/: process_PeerRead_abstracts.py
PeerRead/dataset/: array_from_dataset.py  dataset.py  sentence_masking.py
PeerRead/model/: bert_multiclass.py  run_causal_bert.py  run_causal_bert_alt.py  run_classifier.py  run_classifier_custom_training.py  run_classifier_keras_training.py  run_multiclass.py  run_pretraining.py
hacking/: bert_models.py  run_pretraining.py
hacking/dat/: test.tf_record
modeling/: model_training_utils.py  model_training_utils_test.py  tf_utils.py
modeling/activations/: __init__.py  gelu_test.py  swish_test.py
modeling/hyperparams/: params_dict_test.py
nlp/: bert_modeling.py  bert_models.py  xlnet_config.py  xlnet_modeling.py  xlnet_modeling_test.py
nlp/bert/: README.md  classifier_data_lib.py  common_flags.py  create_finetuning_data.py  create_pretraining_data.py  export_tfhub.py  export_tfhub_test.py  input_pipeline.py  run_classifier.py  run_pretraining.py  run_squad.py  squad_lib.py  tokenization_test.py
nlp/xlnet/: classifier_utils.py  data_utils.py  optimization.py  preprocess_classification_data.py  preprocess_pretrain_data.py  preprocess_squad_data.py  run_classifier.py  run_pretrain.py  run_squad.py  squad_utils.py  training_utils.py
src/PeerRead/: compute_estimates.py
src/causal_bert/: bert_models.py  data_utils.py  misc_utils.py
src/reddit/: att.py  compute_estimates.py
src/semi_parametric_estimation/: ate.py  att.py  helpers.py
utils/flags/: _base.py  _performance.py  core.py  flags_test.py
utils/logs/: hooks_helper_test.py  logger_test.py
utils/misc/: distribution_utils.py  model_helpers_test.py
utils/testing/: integration.py  reference_data_test.py
(+139 files in other folders)
